# mobile-kotlin/app/src/main/java/io/ycvk/acorn/api/models/RunResult.kt
@@ -1,74 +1,0 @@
-/**
- *
- * Please note:
- * This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * Do not edit this file manually.
- *
- */
-
-@file:Suppress(
-    "ArrayInDataClass",
-    "DuplicatedCode",
-    "EnumEntryName",
-    "RemoveRedundantQualifierName",
-    "RemoveRedundantCallsOfConversionMethods",
-    "REDUNDANT_CALL_OF_CONVERSION_METHOD",
-    "RedundantUnitReturnType",
-    "RemoveEmptyClassBody",
-    "UnnecessaryVariable",
-    "UnusedImport",
-    "UnnecessaryVariable",
-    "unused"
-)
-
-package io.ycvk.acorn.api.models
-
-
-import com.squareup.moshi.Json
-import com.squareup.moshi.JsonClass
-
-/**
- * 
- *
- * @param runId 
- * @param status 
- * @param output 
- * @param error 
- * @param interrupted 
- */
-
-
-data class RunResult (
-
-    @Json(name = "run_id")
-    val runId: kotlin.String,
-
-    @Json(name = "status")
-    val status: RunResult.Status,
-
-    @Json(name = "output")
-    val output: kotlin.String? = null,
-
-    @Json(name = "error")
-    val error: kotlin.String? = null,
-
-    @Json(name = "interrupted")
-    val interrupted: kotlin.collections.Map<kotlin.String, kotlin.Any>? = null
-
-) {
-
-    /**
-     * 
-     *
-     * Values: running,completed,interrupted,failed
-     */
-    @JsonClass(generateAdapter = false)
-    enum class Status(val value: kotlin.String) {
-        @Json(name = "running") running("running"),
-        @Json(name = "completed") completed("completed"),
-        @Json(name = "interrupted") interrupted("interrupted"),
-        @Json(name = "failed") failed("failed");
-    }
-
-}
-
